<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />



        <item android:id="@+id/nav_dem"
            android:title="@string/menu_demande"
            android:icon="@drawable/demand"/>
        <item android:id="@+id/moyenne"
            android:title="@string/menu_calcule"
            android:icon="@drawable/moyen"/>
    </group>

    <item android:title="@string/menu_comunic">
        <menu>
            <item
                android:id="@+id/nav_sup"
                android:icon="@android:drawable/star_big_on"
                android:title="@string/menu_support" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
